<resources>
    <string name="app_name">李茜爱背单词</string>
    <string name="button">按钮</string>
    <string name="continue_learn">继续学习</string>
    <string name="review">复习</string>
    <string name="check_lexicon">查看词库</string>
    <string name="start_learn">开始学习</string>
    <string name="word">单词</string>
    <string name="english">English</string>
    <string name="chinese">中文</string>
    <string name="answer">答案</string>
    <string name="next">下一个</string>
    <string name="add">添加</string>
    <string name="import_in">从本地导入</string>
    <string name="lexicon_info">词库信息</string>
    <string name="word_sum">单词总数</string>
    <string name="default_zero">0</string>
    <string name="word_learned">已经学习的单词</string>
    <string name="lexicon_manage">词库管理</string>
    <string name="add_word">添加单词</string>
    <string name="last">上一个</string>
    <string name="add_new_word">添加生词</string>
    <string name="new_word">生词</string>
    <string name="cancel_new_word">取消生词</string>
    <string name="word_manage">单词管理</string>
    <string name="submit">提交</string>
    <string name="insert_new_word">插入生词本</string>
    <string name="update_word">修改单词</string>
    <string name="new_word_book">生词本</string>
    <string name="insert_words">新增单词</string>
    <string name="manage_lexicon">管理词库</string>
    <string name="card_record">打卡记录</string>
    <string name="unit">单元</string>
    <string name="setting">修改</string>
    <string name="select">查找</string>
    <string name="remove">移除</string>
    <string name="recite">复习</string>
    <string name="select_unit_of_recite">选择要复习的单元</string>
</resources>