<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <variable
            name="viewModel"
            type="com.csu.wordtutor.viewmodels.UpdateWordViewModel" />
    </data>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minEms="4"
                android:text="@string/english" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:minEms="10"
                android:text="@={viewModel.english}" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minEms="4"
                android:text="@string/chinese" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:minEms="10"
                android:text="@={viewModel.chinese}" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minEms="8"
                android:text="@string/insert_new_word" />

            <Switch
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="@{viewModel.newWord}"
                android:minEms="4"
                android:onClick="@{()->viewModel.onNewWordClick()}" />
        </LinearLayout>

        <com.qmuiteam.qmui.widget.roundwidget.QMUIRoundButton
            style="@style/simple_button3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="@{()->viewModel.onSubmitClick()}"
            android:text="@string/submit" />

    </LinearLayout>
</layout>
