<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="viewModel"
            type="com.csu.wordtutor.viewmodels.ReLearnViewModel" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background2">

        <LinearLayout
            android:id="@+id/ll_index"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_margin="50dp"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{viewModel.unitTitle+String.valueOf(viewModel.unitId)}"
                android:textSize="28sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{String.valueOf(viewModel.index+1)+'/'+String.valueOf(viewModel.size)}"
                android:textSize="18sp" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/ll_word"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/ll_bottom"
            android:layout_below="@+id/ll_index"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="30dp"
                android:gravity="center"
                android:text="@{viewModel.english}"
                android:textColor="@color/black"
                android:textSize="60sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@{viewModel.chinese}"
                android:textSize="28sp"
                android:textStyle="bold"
                android:visibility="@{viewModel.answerVisibility}" />

            <ToggleButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@null"
                android:checked="@{viewModel.newWord}"
                android:onClick="@{()->viewModel.onNewWordClick()}"
                android:textOff="@string/add_new_word"
                android:textOn="@string/cancel_new_word" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_bottom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="50dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <com.qmuiteam.qmui.widget.roundwidget.QMUIRoundButton
                android:id="@+id/bt_last"
                style="@style/simple_button2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="@{()->viewModel.onLastClick()}"
                android:text="@string/last" />

            <com.qmuiteam.qmui.widget.roundwidget.QMUIRoundButton
                android:id="@+id/bt_answer"
                style="@style/simple_button2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="@{()->viewModel.onAnswerClick()}"
                android:text="@string/answer" />

            <com.qmuiteam.qmui.widget.roundwidget.QMUIRoundButton
                android:id="@+id/bt_next"
                style="@style/simple_button2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="@{()->viewModel.onNextClick()}"
                android:text="@string/next" />
        </LinearLayout>

    </RelativeLayout>
</layout>
